--- a/project-1/style.css
+++ b/project-1/style.css
@@ -9,59 +9,188 @@
 }
 
 .sky {
+    position: relative;
     max-width: 100%;
     max-height: 100%;
     margin: auto;
     z-index: 1;
 }
 
-.ocean {
+.finder{
     position: absolute;
-    width: 100%;
     z-index: 2;
-    top: -35%
+    max-width: 70%;
+    left: 15%;
+    top: 23%;
 }
 
-.sand{
+.alphasc {
     position: absolute;
-    width: 100%;
     z-index: 3;
-    top: 18%;
+    max-width: 8%;
+    left: 20%;
+    top: 35%;
 }
 
-.compcluster1 {
+.annasc{
     position: absolute;
-    bottom: -18%;
-    left: 3%;
     z-index: 3;
+    max-width: 8%;
+    left: 33%;
+    top: 36%;
 }
 
-.compcluster2 {
+.annesc{
     position: absolute;
-    width: 40%;
-    bottom: -20%;
-    right: 5%;
     z-index: 3;
-
+    max-width: 8%;
+    left: 46%;
+    top: 36.5%;
 }
 
-.seaweed{
+.anne2sc{
     position: absolute;
-    width: 25%;
-    bottom: -10%;
-    left: 1%;
+    z-index: 3;
+    max-width: 8%;
+    left: 59%;
+    top: 32.5%;
+}
+
+.anne3sc{
+    position: absolute;
+    z-index: 3;
+    max-width: 8%;
+    left: 71%;
+    top: 35.5%;
+}
+
+.fallonsc{
+    position: absolute;
+    z-index: 3;
+    max-width: 8%;
+    left: 20%;
+    top: 60%;
+}
+
+.nammusc{
+    position: absolute;
+    z-index: 3;
+    max-width: 8%;
+    left: 33%;
+    top: 60.5%;
+}
+
+.hornetsc{
+    position: absolute;
+    z-index: 3;
+    max-width: 8%;
+    left: 46%;
+    top: 61.5%;
+}
+
+.prepssc{
+    position: absolute;
+    z-index: 3;
+    max-width: 8%;
+    left: 59%;
+    top: 61.5%;
+}
+
+#alpha{
+    display: none;
+    position: absolute;
+    max-width: 40%;
     z-index: 4;
+    left: 30%;
+    top: 35%;
+    border: 1px solid #7aa5f5;
+    box-shadow: 5px 5px 5px #7aa5f5;
 }
 
-.mic{
+#anna{
+    display: none;
     position: absolute;
+    max-width: 40%;
     z-index: 4;
-    width: 40%;
-    bottom: -24%;
-    right: -5%;
+    left: 30%;
+    top: 40%;
+    border: 1px solid #7aa5f5;
+    box-shadow: 5px 5px 5px #7aa5f5;
 }
 
-.fish{
+#anne{
+    display: none;
     position: absolute;
-    z-index: 3;
+    max-width: 50%;
+    z-index: 4;
+    left: 25%;
+    top: 38%;
+    border: 1px solid #7aa5f5;
+    box-shadow: 5px 5px 5px #7aa5f5;
+}
+
+#anne2{
+    display: none;
+    position: absolute;
+    max-width: 37%;
+    z-index: 4;
+    left: 31.5%;
+    top: 20.5%;
+    border: 1px solid #7aa5f5;
+    box-shadow: 5px 5px 5px #7aa5f5;
+}
+
+#anne3{
+    display: none;
+    position: absolute;
+    max-width: 40%;
+    z-index: 4;
+    left: 30%;
+    top: 40%;
+    border: 1px solid #7aa5f5;
+    box-shadow: 5px 5px 5px #7aa5f5;
+}
+
+#fallon{
+    display: none;
+    position: absolute;
+    max-width: 55%;
+    z-index: 4;
+    left: 22.5%;
+    top: 40%;
+    border: 1px solid #7aa5f5;
+    box-shadow: 5px 5px 5px #7aa5f5;
+}
+
+#nammu{
+    display: none;
+    position: absolute;
+    max-width: 65%;
+    z-index: 4;
+    left: 17.5%;
+    top: 36%;
+    border: 1px solid #7aa5f5;
+    box-shadow: 5px 5px 5px #7aa5f5;
+}
+
+#hornet{
+    display: none;
+    position: absolute;
+    max-width: 55%;
+    z-index: 4;
+    left: 22.5%;
+    top: 42%;
+    border: 1px solid #7aa5f5;
+    box-shadow: 5px 5px 5px #7aa5f5;
+}
+
+#preps{
+    display: none;
+    position: absolute;
+    max-width: 40%;
+    z-index: 4;
+    left: 30%;
+    top: 40%;
+    border: 1px solid #7aa5f5;
+    box-shadow: 5px 5px 5px #7aa5f5;
 }
