--- a/project-1/style.css
+++ b/project-1/style.css
@@ -194,3 +194,108 @@
     border: 1px solid #7aa5f5;
     box-shadow: 5px 5px 5px #7aa5f5;
 }
+
+#alpha_info{
+    display: none;
+    position: absolute;
+    max-width: 35%;
+    z-index: 5;
+    left: 32%;
+    top: 21%;
+    border: 1px solid #7aa5f5;
+    box-shadow: 5px 5px 5px #7aa5f5;
+}
+
+#anna_info{
+    display: none;
+    position: absolute;
+    max-width: 35%;
+    z-index: 5;
+    left: 32%;
+    top: 21%;
+    border: 1px solid #7aa5f5;
+    box-shadow: 5px 5px 5px #7aa5f5;
+    
+}
+
+#anne_info{
+    display: none;
+    position: absolute;
+    max-width: 35%;
+    z-index: 5;
+    left: 32%;
+    top: 21%;
+    border: 1px solid #7aa5f5;
+    box-shadow: 5px 5px 5px #7aa5f5;
+    
+}
+
+#anne2_info{
+    display: none;
+    position: absolute;
+    max-width: 35%;
+    z-index: 5;
+    left: 32%;
+    top: 21%;
+    border: 1px solid #7aa5f5;
+    box-shadow: 5px 5px 5px #7aa5f5;
+    
+}
+
+#anne3_info{
+    display: none;
+    position: absolute;
+    max-width: 35%;
+    z-index: 5;
+    left: 32%;
+    top: 21%;
+    border: 1px solid #7aa5f5;
+    box-shadow: 5px 5px 5px #7aa5f5;
+    
+}
+
+#fallon_info{
+    display: none;
+    position: absolute;
+    max-width: 35%;
+    z-index: 5;
+    left: 32%;
+    top: 21%;
+    border: 1px solid #7aa5f5;
+    box-shadow: 5px 5px 5px #7aa5f5;
+    
+}
+
+#nammu_info{
+    display: none;
+    position: absolute;
+    max-width: 35%;
+    z-index: 5;
+    left: 32%;
+    top: 21%;
+    border: 1px solid #7aa5f5;
+    box-shadow: 5px 5px 5px #7aa5f5;
+    
+}
+
+#hornet_info{
+    display: none;
+    position: absolute;
+    max-width: 35%;
+    z-index: 5;
+    left: 32%;
+    top: 21%;
+    border: 1px solid #7aa5f5;
+    box-shadow: 5px 5px 5px #7aa5f5;
+}
+
+#preps_info{
+    display: none;
+    position: absolute;
+    max-width: 35%;
+    z-index: 5;
+    left: 32%;
+    top: 21%;
+    border: 1px solid #7aa5f5;
+    box-shadow: 5px 5px 5px #7aa5f5;
+}
