--- a/homepage/style.css
+++ b/homepage/style.css
@@ -12,6 +12,13 @@
     margin-left: 7px;
 }
 
+div.thoughts{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
+}
+
 #gradient_text {
 
     background-color: #f28705#F28705;
@@ -52,22 +59,41 @@ h2 {
     font-size: 20px
 }
 
+h2.thoughts {
+    font-family: 'Rubik';
+    font-weight: 500;
+    color: black;
+    text-shadow: 2px 2px #F2C335;
+    font-size: 50px;
+    text-align: center;
+}
+
 a {
     font-family: 'Rubik';
-    font-weight: 400;
+    font-weight: 500;
     color: #F28705;
     text-decoration: none;
+    line-height: 1.5em;
 }
 
 a:hover {
     font-family: 'Rubik';
-    font-weight: 400;
+    font-weight: 500;
     color: #F28705;
     background-color: #F2C335; opacity: 0.8;
     text-decoration: none;
 }
 
-p {
+#description{
+    font-family: 'Rubik';
+    font-weight: 400;
+    font-size: 15px;
+    color: black;
+    text-align: left;
+    padding: -2px;
+}
+
+#intro {
     font-family: 'Rubik';
     font-weight: 400;
     text-align: justify;
@@ -77,8 +103,21 @@ p {
     margin-top: -1%;
 }
 
+#thoughts {
+    font-family: 'Rubik';
+    font-weight: 400;
+    font-size: 15px;
+    text-align: justify;
+    color: black;
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: -1%;
+    line-height: 22px;
+}
+
 .row {
-    display: flex;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
 }
 
 .column1 {
@@ -105,8 +144,76 @@ p {
 .column4 {
     flex: 50%;
     padding: 50px;
-padding-top: 20px;
+    padding-top: 20px;
+}
 
+#more {
+    display: none;
+}
+
+.myBtn{
+    font-family: 'Rubik';
+    font-weight: 400;
+    font-size: 12px;
+    color: black;
+    border-style: solid;
+    border-radius: 5px;
+    border-color: #F2C335;
+    border-width: 3px;
+    padding: 5px;
+    
+}
+
+.myBtn:hover{
+    border-color: #F28705;
+}
+
+.myBtn:focus{
+    border-color: white;
+    color:white;
+    outline: none;
+}
+
+#myBtnThoughts{
+    
+    position: absolute;
+    font-family: 'Rubik';
+    font-weight: 400;
+    font-size: 18px;
+    color: black;
+    border-style: solid;
+    border-radius: 5px;
+    border-color: #F2C335;
+    border-width: 3px;
+    padding: 5px;
+    margin: 0;
+}
+
+#myBtnThoughts:hover{
+    border-color: #F28705;
+}
+
+#myBtnThoughts:focus{
+    border-color: white;
+    color:white;
+    outline: none;
+}
+
+iframe{
+    width:225px;
+    height: 225px;   
+}
+
+.grid-container {
+  display: grid;
+  /*grid-template-columns: auto auto auto auto; */
+}
+
+iframe{
+    border-style: solid;
+    border-color: #F2C335;
+    border-width: 5px;
+    border-radius: 10px;
 }
 
 /* color palette from adobe: "One outstanding idea concept with yellow light bulbs" by Tierney
